--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap');
 
+:root {
+
+}
 
 * {
     margin: 0;
@@ -8,3 +11,13 @@
     font-family: 'Nunito', sans-serif;
 
 }
+
+main {
+    max-width: 600px;
+}
+
+#text-area {
+    display: block;
+    width: 100%;
+}
+    
