--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ nav .nav-title {
 main {
     /* border: 1px solid red; */
     
-    max-width: 60%;
+    max-width: 600px;
 
     padding: 1rem;
     margin: auto;
