added some styling

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 * {
     margin: 0;
@@ -6,6 +6,15 @@
     box-sizing: border-box;
     font-family: 'Nunito', sans-serif;
 
+}
+
+body {
+
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('pirates.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;   
+    background-position: bottom;
 }
 
 nav {
@@ -16,9 +25,11 @@ nav {
     background-color: #ffff;
     background-color: #9CA3AF;
 
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
 
-   
+    opacity: 90%;
+
+
 }
 
 nav .nav-title {
@@ -35,48 +46,64 @@ main {
     max-width: 600px;
 
     padding: 1rem;
-    margin: auto;
+    margin: 0rem auto;
 
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('pirates.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;   
+
+   
 }
 
 #text-area {
     display: block;
     width: 100%;
-    min-height: 20vh;
-    margin-top: 2rem;
+    min-height: 16vh;
+    max-height: 20vh;
     font-size: large;
     padding: 1rem;
+
+    border-radius: 0.5rem;
+
+    border: 1px solid black;
+
+    margin-bottom: 1rem;
+
+    
+
 }
 
 #btn-submit {
-    margin-top: 1rem;
-    padding: 1rem 2rem;
+
+    padding: 1rem;
     font-size: large;
 
     cursor:pointer;
+
+    border: 1px solid black;
+    border-radius: 0.5rem;
+
+    margin-bottom: 1rem;
 }
 
 #content {
-    margin-top: 1rem;
+
     color: #fff;
 }
 
 #output {
-    border: 1px solid white;
+    border: 1px solid black;
     background-color: white;
 
-    min-height: 15vh;
+    min-height: 16vh;
     max-height: 20vh;
     width: 100%;
     overflow: scroll;
 
     padding: 1rem;
     font-size: large;
+
+    border-radius: 0.5rem;
+
 }
+
 footer {
     /* border: 1px solid green; */
 
@@ -84,25 +111,37 @@ footer {
 
     position: fixed;
     bottom: 0;
-    width: 100%;
-    padding: 1.5rem;
+    right: 0;
+    left: 0;
+    max-width: 100%;
+    padding: 1rem 0.5rem;
 
     text-align: center;
 
     background-color: #9CA3AF;
 
+    opacity: 90%;
+
 }
 
 #footer-title {
+
     font-size: larger;
     font-weight: 600;
+    margin-bottom: 0.5rem;
 }
 
 #footer-content {
     max-width: 600px;
     margin: auto;
 
+    line-height: 1.5;
+
     
+}
+
+footer strong {
+    font-weight: 600;
 }
 
 
